--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,10 @@ timeout = 90
 line-length = 120
 target-version = ['py39']
 
+[tool.codespell]
+exclude-file = ".codespell/ignore_lines.txt"
+ignore-words = ".codespell/ignore_words.txt"
+
 [tool.isort]
 src_paths = ["doc", "src"]
 py_version = 39
