--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -66,7 +66,8 @@ jobs:
         run: rm -rf /tmp/${{ github.sha }}
 
       - name: Ensure version.py exists
-        run: python3 -m build
+        run: python3 setup.py bdist_wheel
+        # Update to install build and run: python3 -m build
 
       - name: Run sphinx to make docs
         run: |
