--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=72.1", "wheel>=0.36.2", "setuptools_scm>=6.3.1"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "decisionengine"
+name = "hepcloud-de"
 dynamic = ["version"]
 # version = "1.1.0"
 requires-python = ">=3.9"
