Added DE and DEM init/setup scripts

--- a/package/systemd/decisionengine.service
+++ b/package/systemd/decisionengine.service
@@ -10,11 +10,16 @@ After = network.target
 [Service]
 Type = simple
 EnvironmentFile = -/etc/sysconfig/decisionengine
-User = decisionengine
-Group = decisionengine
 PrivateTmp = true
+
+# + in ExecStartPre/ExecStart should allow o run as root (process is executed with full privileges)
+# But it seems not to work, at least in the systemctl emulation, so running as root and switching in the script wrapper
+# User = decisionengine
+# Group = decisionengine
+# ExecStartPre = +/usr/bin/decisionengine-init.sh
 ExecStart = /usr/bin/decisionengine "$DE_OPTS"
-ExecStop = /usr/bin/echo "Running /usr/bin/de-client --stop" >&2
+# The specified command should be a synchronous operation, not an asynchronous one
+# Only one command allowed: ExecStop = /usr/bin/echo "Running /usr/bin/de-client --stop" >&2
 ExecStop = /usr/bin/de-client --stop
 # ExecReload=/usr/sbin/decsionengine reload  $MAINPID
 
